rešen primer v Kviz1